<!-- (c) https://github.com/MontiCore/monticore -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>de.monticore.lang.monticar.utilities</groupId>
    <artifactId>maven-streamtest</artifactId>
    <packaging>maven-plugin</packaging>
    <version>0.0.24-SNAPSHOT</version>

    <name>maven-package Streamtest Mojo</name>
    <url>http://maven.apache.org</url>

    <properties>
        <EMAM2Middleware.version>0.1.2-SNAPSHOT</EMAM2Middleware.version>
        <EMADLGenerator.version>0.5.3-SNAPSHOT</EMADLGenerator.version>
        <!--misc-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugin-tools</groupId>
            <artifactId>maven-plugin-annotations</artifactId>
            <version>3.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker</artifactId>
            <version>2.3.23</version>
        </dependency>

        <dependency>
            <groupId>de.monticore.lang.monticar</groupId>
            <artifactId>embedded-montiarc-math-middleware-generator</artifactId>
            <version>${EMAM2Middleware.version}</version>
        </dependency>

        <dependency>
            <groupId>de.monticore.lang.monticar</groupId>
            <artifactId>embedded-montiarc-emadl-generator</artifactId>
            <version>${EMADLGenerator.version}</version>
        </dependency>


    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
                <version>3.5</version>
                <configuration>
                    <goalPrefix>streamtest</goalPrefix>
                    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
                </configuration>
                <executions>
                    <execution>
                        <id>mojo-descriptor</id>
                        <goals>
                            <goal>descriptor</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>help-goal</id>
                        <goals>
                            <goal>helpmojo</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    
     <!-- == DISTRIBUTION ==================================================== -->

  <distributionManagement>
    <repository>
      <id>se-nexus</id>
      <url>https://nexus.se.rwth-aachen.de/content/repositories/embeddedmontiarc-releases/</url>
    </repository>
    <snapshotRepository>
      <id>se-nexus</id>
      <url>https://nexus.se.rwth-aachen.de/content/repositories/embeddedmontiarc-snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

</project>
